# resume2pdf

./: .gitignore  README.md  pyproject.toml  schema.json
resume2pdf/: __init__.py  cli.py  cover_letter.html  template.html
